--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -39,6 +39,7 @@
 @import './adminVentas/cajaDiaria';
 @import './adminVentas/clinicalDashboard';
 @import './adminVentas/resumenSemanal';
+@import './utils/peluqueroProfile';
 
 * {
     margin: 0;
