adding all the last tweeks, finished prooduction first edition

--- a/src/css/adminClinica/_verPacientes.scss
+++ b/src/css/adminClinica/_verPacientes.scss
@@ -61,6 +61,9 @@ $border-radius: 12px;
             font-size: 1.2rem;
             color: $text-color;
             margin: 0;
+            .link-class {
+                color: #1c2d43;
+            }
         }
         .paciente-breed {
             font-size: 0.9rem;
@@ -77,6 +80,9 @@ $border-radius: 12px;
         color: $text-color;
         font-weight: 500;
         margin: 0;
+        .link-class {
+                color: #1c2d43;
+            }
     }
 }
 
