--- a/src/css/adminClinica/_verTutores.scss
+++ b/src/css/adminClinica/_verTutores.scss
@@ -69,6 +69,9 @@ $grooming-color: #9B59B6;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            .link-class {
+                color: #3c4858;
+            }
         }
         .tutor-contact {
             font-size: 0.9rem;
